--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 class="title has-text-white is-clickable" onclick = "location.href =window.location.href;">
         onlyyoutubesearch
       </h1>
-      <div class="control" style="white-space:nowrap; padding-bottom: 2%;">
+      <div class="control" style="white-space:nowrap; padding-top:2%;padding-bottom: 2%;">
         <input id="search"class="input" type="text" style="width:50%;"placeholder="Search">
         <button id = "submit" class="button is-primary" >Search</button> 
       </div>
